--- a/finalexam.css
+++ b/finalexam.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   min-height: 100vh;
   color:white;
-  background: url(" file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gif4.gif");
+  background: url("img1.gif");
 }
 
 .form-group {
