--- a/luxmundi.css
+++ b/luxmundi.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0; 
-    background:url("file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gif4.gif");
+    background:url("img1.gif");
     color: #333;
 }
 
