--- a/home.css
+++ b/home.css
@@ -36,7 +36,7 @@ section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1em;
-    background: url(" file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gif5.gif");
+    background: url("img3.gif");
 }
 
 .photo-item {
@@ -52,7 +52,7 @@ section {
 .about-me {
     text-align: left;
     color:white;
-    background: url(" file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gif5.gif");
+    background: url("img3.gif");
 }
 
 footer {
