--- a/about.css
+++ b/about.css
@@ -2,14 +2,14 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  background: url("file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gif3.gif");
+  background: url("img2.gif");
 }
 
 section {
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
-  background: url("file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gif3.gif");
+  background: url("img2.gif");
 }
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
