--- a/gallery.css
+++ b/gallery.css
@@ -1,5 +1,5 @@
 body{
-    background: url("file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gif3.gif");
+    background: url("img2.gif");
 }
 .gallery {
   display: grid;
